fix mobile alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,9 +119,8 @@
 @media only screen and (max-width: 600px) {
 /* Instruction popup styling */
 #instructionPopup {
-  position: relative;
-  align-self: center;
-  margin-top: 260;  
+  position: absolute;
+  margin-top: 120px;  
   background: rgba(255, 255, 255, 0.9);
   border-radius: 12px;
   padding: 6% 6px;
@@ -147,10 +146,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 40px;
+  padding: 5px;
   border-radius: 10px;
   z-index: 1000;
-  width: 60%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center; /* Vertically center content */
